SonarValidator_Prober/parser/generated/grammar/OvsTopologyParser.cpp

// Generated from grammar/OvsTopology.g4 by ANTLR 4.13.2


#include "OvsTopologyVisitor.h"

#include "OvsTopologyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct OvsTopologyParserStaticData final {
  OvsTopologyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OvsTopologyParserStaticData(const OvsTopologyParserStaticData&) = delete;
  OvsTopologyParserStaticData(OvsTopologyParserStaticData&&) = delete;
  OvsTopologyParserStaticData& operator=(const OvsTopologyParserStaticData&) = delete;
  OvsTopologyParserStaticData& operator=(OvsTopologyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ovstopologyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<OvsTopologyParserStaticData> ovstopologyParserStaticData = nullptr;

void ovstopologyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ovstopologyParserStaticData != nullptr) {
    return;
  }
#else
  assert(ovstopologyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<OvsTopologyParserStaticData>(
    std::vector<std::string>{
      "showDocument", "listDocument", "flowDocument", "showVlanDocument", 
      "showItem", "bridgeLine", "portLine", "ifaceLine", "attrLine", "nameToken", 
      "listItem", "listRecord", "recordSep", "flowItem", "flowLine", "genericLine", 
      "blank", "elem"
    },
    std::vector<std::string>{
      "", "", "", "'Bridge'", "'Port'", "'Interface'", "", "", "", "", "", 
      "':'"
    },
    std::vector<std::string>{
      "", "NEWLINE", "WS", "BRIDGE", "PORT", "INTERFACE", "FLOWTOKEN", "ATTRWORD", 
      "QUOTED", "DASHES", "WORD", "COLON"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ovstopologyParserStaticData = std::move(staticData);
}

}

OvsTopologyParser::OvsTopologyParser(TokenStream *input) : OvsTopologyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

OvsTopologyParser::OvsTopologyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  OvsTopologyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ovstopologyParserStaticData->atn, ovstopologyParserStaticData->decisionToDFA, ovstopologyParserStaticData->sharedContextCache, options);
}

OvsTopologyParser::~OvsTopologyParser() {
  delete _interpreter;
}

const atn::ATN& OvsTopologyParser::getATN() const {
  return *ovstopologyParserStaticData->atn;
}

std::string OvsTopologyParser::getGrammarFileName() const {
  return "OvsTopology.g4";
}

const std::vector<std::string>& OvsTopologyParser::getRuleNames() const {
  return ovstopologyParserStaticData->ruleNames;
}

const dfa::Vocabulary& OvsTopologyParser::getVocabulary() const {
  return ovstopologyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView OvsTopologyParser::getSerializedATN() const {
  return ovstopologyParserStaticData->serializedATN;
}


//----------------- ShowDocumentContext ------------------------------------------------------------------

OvsTopologyParser::ShowDocumentContext::ShowDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::ShowDocumentContext::EOF() {
  return getToken(OvsTopologyParser::EOF, 0);
}

std::vector<OvsTopologyParser::ShowItemContext *> OvsTopologyParser::ShowDocumentContext::showItem() {
  return getRuleContexts<OvsTopologyParser::ShowItemContext>();
}

OvsTopologyParser::ShowItemContext* OvsTopologyParser::ShowDocumentContext::showItem(size_t i) {
  return getRuleContext<OvsTopologyParser::ShowItemContext>(i);
}


size_t OvsTopologyParser::ShowDocumentContext::getRuleIndex() const {
  return OvsTopologyParser::RuleShowDocument;
}


std::any OvsTopologyParser::ShowDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitShowDocument(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::ShowDocumentContext* OvsTopologyParser::showDocument() {
  ShowDocumentContext *_localctx = _tracker.createInstance<ShowDocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, OvsTopologyParser::RuleShowDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4094) != 0)) {
      setState(36);
      showItem();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(OvsTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListDocumentContext ------------------------------------------------------------------

OvsTopologyParser::ListDocumentContext::ListDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::ListDocumentContext::EOF() {
  return getToken(OvsTopologyParser::EOF, 0);
}

std::vector<OvsTopologyParser::ListItemContext *> OvsTopologyParser::ListDocumentContext::listItem() {
  return getRuleContexts<OvsTopologyParser::ListItemContext>();
}

OvsTopologyParser::ListItemContext* OvsTopologyParser::ListDocumentContext::listItem(size_t i) {
  return getRuleContext<OvsTopologyParser::ListItemContext>(i);
}


size_t OvsTopologyParser::ListDocumentContext::getRuleIndex() const {
  return OvsTopologyParser::RuleListDocument;
}


std::any OvsTopologyParser::ListDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitListDocument(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::ListDocumentContext* OvsTopologyParser::listDocument() {
  ListDocumentContext *_localctx = _tracker.createInstance<ListDocumentContext>(_ctx, getState());
  enterRule(_localctx, 2, OvsTopologyParser::RuleListDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4094) != 0)) {
      setState(44);
      listItem();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(OvsTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FlowDocumentContext ------------------------------------------------------------------

OvsTopologyParser::FlowDocumentContext::FlowDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::FlowDocumentContext::EOF() {
  return getToken(OvsTopologyParser::EOF, 0);
}

std::vector<OvsTopologyParser::FlowItemContext *> OvsTopologyParser::FlowDocumentContext::flowItem() {
  return getRuleContexts<OvsTopologyParser::FlowItemContext>();
}

OvsTopologyParser::FlowItemContext* OvsTopologyParser::FlowDocumentContext::flowItem(size_t i) {
  return getRuleContext<OvsTopologyParser::FlowItemContext>(i);
}


size_t OvsTopologyParser::FlowDocumentContext::getRuleIndex() const {
  return OvsTopologyParser::RuleFlowDocument;
}


std::any OvsTopologyParser::FlowDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitFlowDocument(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::FlowDocumentContext* OvsTopologyParser::flowDocument() {
  FlowDocumentContext *_localctx = _tracker.createInstance<FlowDocumentContext>(_ctx, getState());
  enterRule(_localctx, 4, OvsTopologyParser::RuleFlowDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4094) != 0)) {
      setState(52);
      flowItem();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(58);
    match(OvsTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShowVlanDocumentContext ------------------------------------------------------------------

OvsTopologyParser::ShowVlanDocumentContext::ShowVlanDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::ShowVlanDocumentContext::EOF() {
  return getToken(OvsTopologyParser::EOF, 0);
}

std::vector<OvsTopologyParser::ShowItemContext *> OvsTopologyParser::ShowVlanDocumentContext::showItem() {
  return getRuleContexts<OvsTopologyParser::ShowItemContext>();
}

OvsTopologyParser::ShowItemContext* OvsTopologyParser::ShowVlanDocumentContext::showItem(size_t i) {
  return getRuleContext<OvsTopologyParser::ShowItemContext>(i);
}


size_t OvsTopologyParser::ShowVlanDocumentContext::getRuleIndex() const {
  return OvsTopologyParser::RuleShowVlanDocument;
}


std::any OvsTopologyParser::ShowVlanDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitShowVlanDocument(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::ShowVlanDocumentContext* OvsTopologyParser::showVlanDocument() {
  ShowVlanDocumentContext *_localctx = _tracker.createInstance<ShowVlanDocumentContext>(_ctx, getState());
  enterRule(_localctx, 6, OvsTopologyParser::RuleShowVlanDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4094) != 0)) {
      setState(60);
      showItem();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(OvsTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShowItemContext ------------------------------------------------------------------

OvsTopologyParser::ShowItemContext::ShowItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OvsTopologyParser::BridgeLineContext* OvsTopologyParser::ShowItemContext::bridgeLine() {
  return getRuleContext<OvsTopologyParser::BridgeLineContext>(0);
}

OvsTopologyParser::PortLineContext* OvsTopologyParser::ShowItemContext::portLine() {
  return getRuleContext<OvsTopologyParser::PortLineContext>(0);
}

OvsTopologyParser::IfaceLineContext* OvsTopologyParser::ShowItemContext::ifaceLine() {
  return getRuleContext<OvsTopologyParser::IfaceLineContext>(0);
}

OvsTopologyParser::AttrLineContext* OvsTopologyParser::ShowItemContext::attrLine() {
  return getRuleContext<OvsTopologyParser::AttrLineContext>(0);
}

OvsTopologyParser::GenericLineContext* OvsTopologyParser::ShowItemContext::genericLine() {
  return getRuleContext<OvsTopologyParser::GenericLineContext>(0);
}

OvsTopologyParser::BlankContext* OvsTopologyParser::ShowItemContext::blank() {
  return getRuleContext<OvsTopologyParser::BlankContext>(0);
}


size_t OvsTopologyParser::ShowItemContext::getRuleIndex() const {
  return OvsTopologyParser::RuleShowItem;
}


std::any OvsTopologyParser::ShowItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitShowItem(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::ShowItemContext* OvsTopologyParser::showItem() {
  ShowItemContext *_localctx = _tracker.createInstance<ShowItemContext>(_ctx, getState());
  enterRule(_localctx, 8, OvsTopologyParser::RuleShowItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(68);
      bridgeLine();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(69);
      portLine();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(70);
      ifaceLine();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(71);
      attrLine();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(72);
      genericLine();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(73);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BridgeLineContext ------------------------------------------------------------------

OvsTopologyParser::BridgeLineContext::BridgeLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::BridgeLineContext::BRIDGE() {
  return getToken(OvsTopologyParser::BRIDGE, 0);
}

OvsTopologyParser::NameTokenContext* OvsTopologyParser::BridgeLineContext::nameToken() {
  return getRuleContext<OvsTopologyParser::NameTokenContext>(0);
}

tree::TerminalNode* OvsTopologyParser::BridgeLineContext::NEWLINE() {
  return getToken(OvsTopologyParser::NEWLINE, 0);
}

std::vector<OvsTopologyParser::ElemContext *> OvsTopologyParser::BridgeLineContext::elem() {
  return getRuleContexts<OvsTopologyParser::ElemContext>();
}

OvsTopologyParser::ElemContext* OvsTopologyParser::BridgeLineContext::elem(size_t i) {
  return getRuleContext<OvsTopologyParser::ElemContext>(i);
}


size_t OvsTopologyParser::BridgeLineContext::getRuleIndex() const {
  return OvsTopologyParser::RuleBridgeLine;
}


std::any OvsTopologyParser::BridgeLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitBridgeLine(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::BridgeLineContext* OvsTopologyParser::bridgeLine() {
  BridgeLineContext *_localctx = _tracker.createInstance<BridgeLineContext>(_ctx, getState());
  enterRule(_localctx, 10, OvsTopologyParser::RuleBridgeLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(OvsTopologyParser::BRIDGE);
    setState(77);
    nameToken();
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4092) != 0)) {
      setState(78);
      elem();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(OvsTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PortLineContext ------------------------------------------------------------------

OvsTopologyParser::PortLineContext::PortLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::PortLineContext::PORT() {
  return getToken(OvsTopologyParser::PORT, 0);
}

OvsTopologyParser::NameTokenContext* OvsTopologyParser::PortLineContext::nameToken() {
  return getRuleContext<OvsTopologyParser::NameTokenContext>(0);
}

tree::TerminalNode* OvsTopologyParser::PortLineContext::NEWLINE() {
  return getToken(OvsTopologyParser::NEWLINE, 0);
}

std::vector<OvsTopologyParser::ElemContext *> OvsTopologyParser::PortLineContext::elem() {
  return getRuleContexts<OvsTopologyParser::ElemContext>();
}

OvsTopologyParser::ElemContext* OvsTopologyParser::PortLineContext::elem(size_t i) {
  return getRuleContext<OvsTopologyParser::ElemContext>(i);
}


size_t OvsTopologyParser::PortLineContext::getRuleIndex() const {
  return OvsTopologyParser::RulePortLine;
}


std::any OvsTopologyParser::PortLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitPortLine(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::PortLineContext* OvsTopologyParser::portLine() {
  PortLineContext *_localctx = _tracker.createInstance<PortLineContext>(_ctx, getState());
  enterRule(_localctx, 12, OvsTopologyParser::RulePortLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(OvsTopologyParser::PORT);
    setState(87);
    nameToken();
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4092) != 0)) {
      setState(88);
      elem();
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(94);
    match(OvsTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfaceLineContext ------------------------------------------------------------------

OvsTopologyParser::IfaceLineContext::IfaceLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::IfaceLineContext::INTERFACE() {
  return getToken(OvsTopologyParser::INTERFACE, 0);
}

OvsTopologyParser::NameTokenContext* OvsTopologyParser::IfaceLineContext::nameToken() {
  return getRuleContext<OvsTopologyParser::NameTokenContext>(0);
}

tree::TerminalNode* OvsTopologyParser::IfaceLineContext::NEWLINE() {
  return getToken(OvsTopologyParser::NEWLINE, 0);
}

std::vector<OvsTopologyParser::ElemContext *> OvsTopologyParser::IfaceLineContext::elem() {
  return getRuleContexts<OvsTopologyParser::ElemContext>();
}

OvsTopologyParser::ElemContext* OvsTopologyParser::IfaceLineContext::elem(size_t i) {
  return getRuleContext<OvsTopologyParser::ElemContext>(i);
}


size_t OvsTopologyParser::IfaceLineContext::getRuleIndex() const {
  return OvsTopologyParser::RuleIfaceLine;
}


std::any OvsTopologyParser::IfaceLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitIfaceLine(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::IfaceLineContext* OvsTopologyParser::ifaceLine() {
  IfaceLineContext *_localctx = _tracker.createInstance<IfaceLineContext>(_ctx, getState());
  enterRule(_localctx, 14, OvsTopologyParser::RuleIfaceLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(OvsTopologyParser::INTERFACE);
    setState(97);
    nameToken();
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4092) != 0)) {
      setState(98);
      elem();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    match(OvsTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttrLineContext ------------------------------------------------------------------

OvsTopologyParser::AttrLineContext::AttrLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::AttrLineContext::ATTRWORD() {
  return getToken(OvsTopologyParser::ATTRWORD, 0);
}

tree::TerminalNode* OvsTopologyParser::AttrLineContext::COLON() {
  return getToken(OvsTopologyParser::COLON, 0);
}

tree::TerminalNode* OvsTopologyParser::AttrLineContext::NEWLINE() {
  return getToken(OvsTopologyParser::NEWLINE, 0);
}

std::vector<OvsTopologyParser::ElemContext *> OvsTopologyParser::AttrLineContext::elem() {
  return getRuleContexts<OvsTopologyParser::ElemContext>();
}

OvsTopologyParser::ElemContext* OvsTopologyParser::AttrLineContext::elem(size_t i) {
  return getRuleContext<OvsTopologyParser::ElemContext>(i);
}


size_t OvsTopologyParser::AttrLineContext::getRuleIndex() const {
  return OvsTopologyParser::RuleAttrLine;
}


std::any OvsTopologyParser::AttrLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitAttrLine(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::AttrLineContext* OvsTopologyParser::attrLine() {
  AttrLineContext *_localctx = _tracker.createInstance<AttrLineContext>(_ctx, getState());
  enterRule(_localctx, 16, OvsTopologyParser::RuleAttrLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(OvsTopologyParser::ATTRWORD);
    setState(107);
    match(OvsTopologyParser::COLON);
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4092) != 0)) {
      setState(108);
      elem();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(114);
    match(OvsTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameTokenContext ------------------------------------------------------------------

OvsTopologyParser::NameTokenContext::NameTokenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OvsTopologyParser::NameTokenContext::QUOTED() {
  return getToken(OvsTopologyParser::QUOTED, 0);
}

tree::TerminalNode* OvsTopologyParser::NameTokenContext::ATTRWORD() {
  return getToken(OvsTopologyParser::ATTRWORD, 0);
}

tree::TerminalNode* OvsTopologyParser::NameTokenContext::WORD() {
  return getToken(OvsTopologyParser::WORD, 0);
}


size_t OvsTopologyParser::NameTokenContext::getRuleIndex() const {
  return OvsTopologyParser::RuleNameToken;
}


std::any OvsTopologyParser::NameTokenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitNameToken(this);
  else
    return visitor->visitChildren(this);
}

OvsTopologyParser::NameTokenContext* OvsTopologyParser::nameToken() {
  NameTokenContext *_localctx = _tracker.createInstance<NameTokenContext>(_ctx, getState());
  enterRule(_localctx, 18, OvsTopologyParser::RuleNameToken);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1408) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListItemContext ------------------------------------------------------------------

OvsTopologyParser::ListItemContext::ListItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OvsTopologyParser::ListRecordContext* OvsTopologyParser::ListItemContext::listRecord() {
  return getRuleContext<OvsTopologyParser::ListRecordContext>(0);
}

OvsTopologyParser::RecordSepContext* OvsTopologyParser::ListItemContext::recordSep() {
  return getRuleContext<OvsTopologyParser::RecordSepContext>(0);
}

OvsTopologyParser::GenericLineContext* OvsTopologyParser::ListItemContext::genericLine() {
  return getRuleContext<OvsTopologyParser::GenericLineContext>(0);
}

OvsTopologyParser::BlankContext* OvsTopologyParser::ListItemContext::blank() {
  return getRuleContext<OvsTopologyParser::BlankContext>(0);
}


size_t OvsTopologyParser::ListItemContext::getRuleIndex() const {
  return OvsTopologyParser::RuleListItem;
}


std::any OvsTopologyParser::ListItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OvsTopologyVisitor*>(visitor))
    return parserVisitor->visitListItem(this);
  else
    return visitor->visitChildren(this);
}
